SERVER-22344 Error if OplogReplay cursor requested on non-capped collection